# pikoshi

./: .gitignore  README.md
backend/: .gitignore  README.md  docker-compose.yml  env-sample  pyproject.toml
backend/scripts/: db_backup.sh  db_restore.sh
backend/src/pikoshi/: alembic.ini  database.py  dependencies.py  main.py
backend/src/pikoshi/config/: redis_config.py
backend/src/pikoshi/meta/: meta.py
backend/src/pikoshi/middlewares/: cors.py  logger.py
backend/src/pikoshi/migrations/: env.py
backend/src/pikoshi/migrations/versions/: 25b556f883b8_added_users_table.py
backend/src/pikoshi/models/: album.py  item.py  network.py  photo.py  user.py
backend/src/pikoshi/routers/: albums.py  auth.py  auth_context.py  gallery.py  google_auth.py  items.py  jwt_auth.py  networks.py  photo.py  users.py
backend/src/pikoshi/schemas/: album.py  auth.py  item.py  network.py  photo.py  user.py
backend/src/pikoshi/services/: album_service.py  auth_service.py  email_service.py  exception_handler_service.py  gallery_service.py  google_oauth_service.py  item_service.py  jwt_service.py  network_service.py  photo_service.py  s3_service.py  security_service.py  user_service.py
backend/src/pikoshi/templates/: change_password.html  signup_email.html
backend/src/pikoshi/tests/: conftest.py  test_items.py  test_users.py
backend/src/pikoshi/utils/: auth_cookies.py  hashers.py  logger.py
docs/: general_overview_backend.md  general_overview_frontend.md  initial_setup.md  tooling.md
frontend/: .gitignore  .prettierrc  README.md  bun.lockb  env-sample  index.html  (+5 more)
(+56 files in other folders)
